# apr-json

./: .gitignore  Makefile.in  README  apj-config.in  apr-json.pc.in  buildconf  configure.in
docs/: doxygen.conf
include/: apj_version.h  apr_json.h
json/: apr_json_decode.c  apr_json_encode.c  apr_json_private.h.in
